--- a/Files/2017/R_Analysis_Markdown_17.Rmd
+++ b/Files/2017/R_Analysis_Markdown_17.Rmd
@@ -8,32 +8,31 @@ tags: ["R Markdown", "plot", "running","marathon","philadelphia","distance runni
 
 # *Initial Data Inspection*
 
-First, I load in the CSV file created in the **R_Cleaning_Garmin_Strava** script file, which contains the combined dataset of runs from my Philadelphia Marathon training plan from both Strava and Garmin Connect. I then inspect the data to make sure I have all the correct data in the correct data types.
+First, I loaded in the CSV file created in the **R_Cleaning_Garmin_Strava** script file, which contains the combined dataset of runs from my Philadelphia Marathon training plan from both Strava and Garmin Connect. I then inspect the data to make sure I have all the correct data in the correct data types.
 
 ```{r load dataset, echo = FALSE, message = FALSE, warning=FALSE}
-library(tidyverse)
-library(ggplot2)
-library(lubridate)
-library(RColorBrewer)
-library(magrittr)
+library(tidyverse) # data cleaning and manipulation
+library(ggplot2) # plotting
+library(lubridate) # dates
+library(RColorBrewer) # plotting
+library(magrittr) # pipe operations
 
+## load in data files for both races
 philly17 <- read.csv("../../Data/2017/cleanedMarathonTrainingData_philly17.csv", stringsAsFactors = F)
 philly16 <- read.csv("../../Data/2016/cleanedMarathonTrainingData_philly16.csv", stringsAsFactors = F)
 
+## combine into 1 dataset and remove redundant row
 philly <- rbind(philly16,philly17)
-
 philly %<>% select(-X)
-
-#dim(philly)
 
 glimpse(philly)
 
 table(philly$Marathon)
 ```
 
-A lot more runs in this plan, as I was attempting higher mileage, so there were a lot of double days, even though some days no running due to injruy (bad bulid up base bauilding) - speed not staming into stamina not speed
+There were a lot more runs in this year's prep, as I was attempting to reach some higher weeky mileage, so there were a lot of double days (pretty much all double recovery runs). And, even though I missed some days completely due to some injuries, I still had almost 40 more runs in this time around. I believe that I was injured thanks to running my "easy" runs too hard, and to not having as long of a base building period prior to this marathon plan compared to last year (more on that later).
 
-`Month` was also not loaded as an ordered factor like I need it. As it is now, if I used it in plots, it would be ordereded alphabetically, not chronologically like I need it. So let's convert it back to an ordered factor with the correctly-specified ordering via the `levels` argument.
+Looking above at the variables, I see that all the `as.POSIXct` fields did not load in as such, and `Month` was also not loaded as an ordered factor like I need it to be. As it is now, if I used `Month` in plots, it would be ordered alphabetically, not chronologically. So I need to convert `Month` back to an ordered factor with the correctly-specified ordering via the `levels` argument.
 
 ```{r}
 philly %<>%
@@ -46,30 +45,30 @@ philly %<>%
          # make Month an ordered factor
          Month = factor(Month, ordered = TRUE, 
                         levels = c("Jul","Aug","Sep","Oct","Nov")))
-names(philly)
+#names(philly)
 ```
 
-Now its time to actually make some plots. 
+Now its time to actually do some analysis.
 
 # Analysis
 
-I'll start off with a simple histogram of how many miles I ran in each of my runs.
+I'll start off with a simple histogram of how many miles I ran throughout each marathon prep.
 
 ```{r plotting, echo = FALSE, fig.align='center'}
 #distance histogram
 ggplot(data = philly, aes(x = Distance)) + 
   geom_histogram(binwidth = 2, aes(fill = ..count..), colour = "black", boundary = 2) +
-  scale_x_continuous(limits=c(0, 30)) +
+  scale_x_continuous(limits = c(0, 30)) +
   xlab("Distance (mi)") + 
   ylab("Frequency") + 
   ggtitle("Distribution of Miles Ran in All Runs") + 
-  guides(fill=FALSE) +
-  facet_grid(~Marathon)
+  guides(fill = FALSE) +
+  facet_grid(~ Marathon)
 ```
 
-Like last year, we again see my mararthon and my one 24 mile run all the way to the right of the plot, my longest **Long Run** of the plan. So this distribution is right/positively-skewed, with the majority of the runs being less than 12 miles. So, as expcted duye to the ihgher milear plan, the histogram has higher bars, indicating more runs, weith bars for the same distance beting noticebaly higher for 2017 comapred to 2016. 
+Just like [last year](https://stevenewns.netlify.com/2017/04/18/marathon-training-plan-data-analysis/), I again can see the actual marathon itself and my one 24 mile run, my longest **Long Run** of the plan, all the way to the right of the plot. So, this distribution is right/positively-skewed, with the majority of the runs being less than 12 miles. So, as expected due to the higher mileage plan, the histogram has some higher bars, indicating a larger number of runs overall, with bars for the same distance being noticebaly higher for 2017 compared to 2016. 
 
-The majority of my runs this training block were around 4-6 miles, with the next highest frequency being from just over 10 miles.
+The majority of my runs this training block were around 4-6 miles, as noted by the histogram for 2017, with the next highest frequency being from 10-12 miles.
 
 ```{r}
 cat("2017 Runs: ")
@@ -77,7 +76,14 @@ table(philly$RunCat[philly$Marathon=="ph17"])
 cat("2016 Runs: ")
 table(philly$RunCat[philly$Marathon=="ph16"])
 ```
-less owrkour, long run, middle lone, more recovery + GA (injury)
+
+The above shows that I had less workouts, long runs, middle long runs (longer than a general aerobic run, shorter than a long run), but more recovery runs and general aerobic runs. This should indicate that I should've been taking it a bit easier in this build-up, although some of the lower numbers for the workouts were due to missing these runs thanks to injury. For example, let's look at those runs that fall under `Misc`:
+```{r}
+philly %>%
+  filter(RunCat == "Misc")
+```
+
+4 of these runs were the warm up and cool downs to tune-up races, but the other 2 were runs I kept short due to injury, one physical, one mental. I started to realize you don't have to hit *every* run on the schedule during the span of this plan.
 
 The fact that most of my runs were from 4-6 miles id obvvoisu when onting that the majory of my runs were recovery runs, which went from a miinimum of 3 miles to a max of 7 miles (for them ,ost part, my mistkae)
 
@@ -307,3 +313,4 @@ It's interesting to note that each run type has a very low variability in maximu
 That's all I can think of to check out so far. If you're reading this and can think of anything else, let me know on [Twitter](https://twitter.com/s_newns92), [GitHub](https://github.com/newns92), or [LinkedIn!](https://www.linkedin.com/in/stephen-newns/) I can't wait to add to this dataset with my training runs for Philly 2017, with the hopes of breaking 3 hours!
 
 The code for this can be found [here](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/R_Analysis_script.R), as well as the code for the [cleaning and initial creation of the dataset](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/R_CleaningScript.R) (WARNING: Please excuse it ugliness, it was before I was aware of the tidyverse.)
+ speed not staming into stamina not speed
