--- a/Files/2017/R_Analysis_Markdown_17.Rmd
+++ b/Files/2017/R_Analysis_Markdown_17.Rmd
@@ -21,6 +21,9 @@ library(magrittr) # pipe operations
 philly17 <- read.csv("../../Data/2017/cleanedMarathonTrainingData_philly17.csv", stringsAsFactors = F)
 philly16 <- read.csv("../../Data/2016/cleanedMarathonTrainingData_philly16.csv", stringsAsFactors = F)
 
+# random missing month value?
+philly16[17,"Month"] <- "Aug"
+
 ## combine into 1 dataset and remove redundant row
 philly <- rbind(philly16,philly17)
 philly %<>% select(-X)
@@ -45,7 +48,6 @@ philly %<>%
          # make Month an ordered factor
          Month = factor(Month, ordered = TRUE, 
                         levels = c("Jul","Aug","Sep","Oct","Nov")))
-#names(philly)
 ```
 
 Now its time to actually do some analysis.
@@ -68,9 +70,9 @@ ggplot(data = philly, aes(x = Distance)) +
 
 Just like [last year](https://stevenewns.netlify.com/2017/04/18/marathon-training-plan-data-analysis/), I again can see the actual marathon itself and my one 24 mile run, my longest **Long Run** of the plan, all the way to the right of the plot. So, this distribution is right/positively-skewed, with the majority of the runs being less than 12 miles. So, as expected due to the higher mileage plan, the histogram has some higher bars, indicating a larger number of runs overall, with bars for the same distance being noticebaly higher for 2017 compared to 2016. 
 
-The majority of my runs this training block were around 4-6 miles, as noted by the histogram for 2017, with the next highest frequency being from 10-12 miles.
+The majority of my runs this training block were around 4-6 miles, as noted by the histogram for 2017, with the next highest frequency being from 10-12 miles. The fact that most of my runs were from 4-6 miles is obvvoisu when noting that the majority of my runs were recovery runs, which went from a minimum of 3 miles up to a maxximum of 7 miles (for them ,ost part, my mistkae)
 
-```{r}
+```{r run type counts, echo = F}
 cat("2017 Runs: ")
 table(philly$RunCat[philly$Marathon=="ph17"])
 cat("2016 Runs: ")
@@ -78,38 +80,38 @@ table(philly$RunCat[philly$Marathon=="ph16"])
 ```
 
 The above shows that I had less workouts, long runs, middle long runs (longer than a general aerobic run, shorter than a long run), but more recovery runs and general aerobic runs. This should indicate that I should've been taking it a bit easier in this build-up, although some of the lower numbers for the workouts were due to missing these runs thanks to injury. For example, let's look at those runs that fall under `Misc`:
-```{r}
+```{r Misc runs, echo = F}
 philly %>%
   filter(RunCat == "Misc")
 ```
 
-4 of these runs were the warm up and cool downs to tune-up races, but the other 2 were runs I kept short due to injury, one physical, one mental. I started to realize you don't have to hit *every* run on the schedule during the span of this plan.
-
-The fact that most of my runs were from 4-6 miles id obvvoisu when onting that the majory of my runs were recovery runs, which went from a miinimum of 3 miles to a max of 7 miles (for them ,ost part, my mistkae)
-
-```{r heart rate over time, echo = FALSE, fig.align='center'}
+4 of these runs were the warm up and cool downs to tune-up races, but the other 2 were runs I kept short due to injury, one physical, one mental. I started to realize you don't have to hit *every* run on the schedule during the span of this plan, as noted by the empty space in the middle of September and October where I took some days off due to the recurring quad injury noted above on that run I cut short on September 13.
+```{r show rest days, echo = FALSE, fig.align='center'}
 philly %>%
   filter(Marathon == "ph17") %>%
   ggplot(aes(Date, Distance)) + 
     geom_bar(stat="identity") +
-    theme(axis.text.x = element_blank()) +
+    #theme(axis.text.x = element_blank()) +
     xlab("Time") + 
     ylab("Average Heart Rate") + 
     ggtitle("Average Heart Rate Over Time")
 ```
 
-
-
-
- Let's look at the summary of this data.
-
-```{r distance summary}
+Let's look at the summary of both marathons distance data:
+```{r distance summary, echo = F}
+cat("2017 Runs: ")
 philly %>% filter(Marathon == "ph17") %>%
   select(Distance) %>%
-  summary()
+  summarize(mean = mean(Distance), median = median(Distance), StdDev = sd(Distance),
+            Min = min(Distance), Max = max(Distance), Count = n())
+cat("2016 Runs: ")
+philly %>% filter(Marathon == "ph16") %>%
+  select(Distance) %>%
+  summarize(mean = mean(Distance), median = median(Distance), StdDev = sd(Distance),
+            Min = min(Distance), Max = max(Distance), Count = n())
 ```
 
-So, since I have a skewed distribution, I'd want to look at median as my measure of center. I can see the median number of miles ran in a run is 7 miles, which is lower than last year, which I can infer was due to more recovery runs this time around from the double days.And agian, see the max distance here is, of course, the actual marathon (but something must've been up with my GPS watch or the course, as it says I ran about .15 miles moreso) 
+So, since I have a skewed distribution, I'd want to look at median as my measure of center. I can see the median number of miles ran in a run is 7 miles, which is lower than last year, which I can infer was due to more recovery runs this time around during the double-run days. And agian, see the max distance here is, of course, the actual marathon (but something must've been up with my GPS watch or the course, as it says I ran about .15 miles moreso than the actual race distance). 
 
 Now let's look at the total number of miles ran each month, with an expectation to see the total rise month by month.
 
@@ -120,27 +122,23 @@ ggplot(philly, aes(Month, Distance, fill = Month)) +
   xlab("") + 
   ylab("Total Miles") + 
   guides(fill=FALSE) +
-  ggtitle("Total Miles by Month")
-  facet_grid(~Marathon)
+  ggtitle("Total Miles by Month") +
+  facet_grid( ~ Marathon)
 ```
 
-The largest number of miles ran, 308 miles, was in September, and then we see a *ever-so-slight* drop to 304 miles in October. This could be possibly so if my peak mileage week was in September. We then see a large drop from October to November, which was expected due tapering up to the race and the fact that the race was on November 20th, so there's no more run data after that date.
+Somewhat supringsly, my total mies in Novelmber was acutally shorter this time aroudn, while the other months were all larger. I expected septermebt and ocotber to be less than august this go aroudn due to the taking off of a couple days due to injiry, so that wasn't too much of a surpise
+
 
 ```{r peak week, echo = FALSE, fig.align='center'}
-ggplot(data = runs, aes(weekNumber, Distance, fill = Month)) + 
+ggplot(data = philly, aes(Week, Distance, fill = Month)) + 
   geom_bar(stat="identity") +
   xlab("Week of Plan") + 
   ylab("Total Miles") + 
-  ggtitle("Total Miles by Week of Plan")
+  ggtitle("Total Miles by Week of Plan") + 
+  facet_grid(~ Marathon)
 ```
 
-Welp, I was half wrong about that I guess. It seems peak week, week 11, was actually both in September *and* October.
-
-```{r peak wk, echo = FALSE}
-runs[runs$weekNumber == 11,c('Name','weekNumber','Date','DOW','Distance')]
-```
-
-So the final 2 runs of peak week coincided with the start of October, with the longest run of the plan, 24 miles, taking place in this week.
+Long drops in Nov = feeling beat up (easy days too hard)
 
 ## Cadence
 
@@ -148,163 +146,226 @@ Another important metric for runners is their **cadence**, which is the number o
 
 ```{r cadence by month, echo = FALSE, fig.align='center'} 
 #avg. cadence grouped by month
-ggplot(data = runs, aes(Month, Cad)) + 
+ggplot(data = philly, aes(Month, Avg.Cadence)) + 
   geom_jitter(aes(colour = Month)) +
   geom_boxplot(aes(fill = Month), outlier.colour = "black", alpha = 0.5) +
   xlab("") + 
   ylab("Cadence (Steps/Min)") + 
   guides(fill=FALSE) +
-  ggtitle("Cadence by Month") 
+  ggtitle("Cadence by Month") + 
+  facet_grid(~ Marathon)
 ```
 
-So, I can see that my cadence tended to generally increases month over month, albeit *barely*, and ended up averaging between 170 and 180, barring those outliers. I would assume the outliers were mainly recovery runs, as I was mainly concerned with keeping my heart rate down so I could actually recover on them than I was with making sure my cadence was optimal. I could investigate to see if this was due to having more speed workouts as the plan progressed, in which I would assume my cadence was typically higher), or could it have been due to improved form from an ever-increasing volume.
+Much more consisten cadence this time aorund, and much higher = GOOD, better form + focus on form, decrease in last 2 months???????, but still optimal
+
+#So, I can see that my cadence tended to generally increases month over month, albeit *barely*, and ended up averaging between 170 and 180, barring those outliers. I would assume the outliers were mainly recovery runs, as I was mainly concerned with keeping my heart rate down so I could actually recover on them than I was with making sure my cadence was optimal. I could investigate to see if this was due to having more speed workouts as the plan progressed, in which I would assume my cadence was typically higher), or could it have been due to improved form from an ever-increasing volume.
 
 ## Heart Rate
 
 Another metric to look at would be my **average heart rate** during runs over the course of my training. Compared to the rise of my cadence, I would expect that my average heart rate would have decreased over time, as my fitness would have increased due to higher mileage and an increasing number of workouts.
 
 ```{r heart rate over time, echo = FALSE, fig.align='center'}
-ggplot(data = runs, aes(Date, Avg.HR)) + 
-  geom_line(aes(group=1)) +
-  geom_smooth(method = "lm", se=T) + 
-  theme(axis.text.x = element_blank()) +
-  xlab("Time") + 
-  ylab("Average Heart Rate") + 
-  ggtitle("Average Heart Rate Over Time")
+philly %>%
+  #filter(Marathon == "ph16") %>%
+  ggplot(data = , aes(as.POSIXct(paste(month(Date),'/',day(Date), sep=""),format="%m/%d"), Avg.HR)) + 
+    geom_line(aes(group=1, colour = Marathon)) +
+    geom_smooth(method = "lm", se = T, aes(colour = Marathon)) + 
+    theme(axis.text.x = element_blank()) +
+    xlab("Time") + 
+    ylab("Average Heart Rate") + 
+    ggtitle("Average Heart Rate Over Time") + 
+    coord_cartesian(ylim = c(110, 160))
 ```
+philly %>%
+  filter(Marathon == "ph17") %>%
+  ggplot(data = , aes(Date, Avg.HR)) + 
+    geom_line(aes(group=1)) +
+    geom_smooth(method = "lm", se=T) + 
+    theme(axis.text.x = element_blank()) +
+    xlab("Time") + 
+    ylab("Average Heart Rate") + 
+    ggtitle("Average Heart Rate Over Time")
+
 
 So, it looks like my average heart rate decreased over time, barring two random extreme drops (shout-out again to my heart rate monitor). Let's check it out by month.
 
 ```{r HR by month boxplot, echo = FALSE, fig.align='center'}
 #avg. HR grouped by month
-ggplot(data = runs, aes(Month, Avg.HR)) + 
+ggplot(data = philly, aes(Month, Avg.HR)) + 
   geom_jitter(aes(colour = Month)) +
   geom_boxplot(aes(fill = Month), outlier.colour = "black", alpha = 0.5) + 
   xlab("Month") + 
   ylab("Avg. Heart Rate") + 
-  ggtitle("Average Heart Rate per Month") 
+  ggtitle("Average Heart Rate per Month") + facet_grid(~ Marathon)
 ```
 
-So we can see that my heart rate had generally decreased month over month, albeit *barely*. *Again*. Now while I would hope it was due to increased fitness (and I still believe that to be the case, just by how I felt during my runs), the drops in temperature as the seasons moved from summer to fall also may have played a part. Since it would have been cooler out, the body would not have been working as hard to cool itself down during my runs, so my heart rate would not have been as high. Maybe finding the historical temperature data and bringing it in could bring some insights into this question.
+Opposite to cadence, had more variance this year, but 1st 4 months were all lower, less outliers this time, November similar
+
+
+#So we can see that my heart rate had generally decreased month over month, albeit *barely*. *Again*. Now while I would hope it was due to increased fitness (and I still believe that to be the case, just by how I felt during my runs), the drops in temperature as the seasons moved from summer to fall also may have played a part. Since it would have been cooler out, the body would not have been working as hard to cool itself down during my runs, so my heart rate would not have been as high. Maybe finding the historical temperature data and bringing it in could bring some insights into this question.
 
 Now let's look at cadence and heart rate by Run Type as well for comparisons.
 
 ```{r cadence by run type, echo = FALSE, fig.align='center'} 
 #avg. cadence grouped by month
-ggplot(data = runs, aes(RunType, Cad)) + 
-  geom_jitter(aes(colour = RunType)) +
-  geom_boxplot(aes(fill = RunType), outlier.colour = "black", alpha = 0.5) +
-  scale_colour_brewer(palette = "Set1") +
-  scale_fill_brewer(palette = "Set1") +
-  xlab("Run Type") + 
-  ylab("Cadence") + 
-  guides(fill=FALSE) +
-  coord_flip() + 
-  ggtitle("Cadence per Run Type") 
-
+philly %>%
+  filter(RunType != "Race",
+         RunType != "Misc") %>%
+  ggplot(aes(RunType, Avg.Cadence)) + 
+    geom_jitter(aes(colour = RunType)) +
+    geom_boxplot(aes(fill = RunType), outlier.colour = "black", alpha = 0.5) +
+    scale_colour_brewer(palette = "Set1") +
+    scale_fill_brewer(palette = "Set1") +
+    xlab("Run Type") + 
+    ylab("Cadence") + 
+    guides(fill=FALSE) +
+    coord_flip() + 
+    ggtitle("Cadence per Run Type") +
+    facet_grid(~ Marathon)
+  
 ```
 
-We can ignore the **Race** run type, since it's only one race. But we can still see that it was either my maximum cadence, or the second or third highest after those 2 quickest workout cadences. We can also see that my recovery runs had the least variability, and recovery runs, as well as normal runs, were in the lower 170's. I also expected my workouts to have the highest cadence, but it has the lowest median and the widest variety. I can only assume that this was due to recovery sections of interval runs, or warm-ups and cooldowns during tempo runs which were *much* slower and relaxed than even recovery runs. 
+Again, higher less variance, Long run had highest, workour lowest w/ most outliers *recovery jogs), recovery lowest (shuffling)
+
+#We can ignore the **Race** run type, since it's only one race. But we can still see that it was either my maximum cadence, or the second or third highest after those 2 quickest workout cadences. We can also see that my recovery runs had the least variability, and recovery runs, as well as normal runs, were in the lower 170's. I also expected my workouts to have the highest cadence, but it has the lowest median and the widest variety. I can only assume that this was due to recovery sections of interval runs, or warm-ups and cooldowns during tempo runs which were *much* slower and relaxed than even recovery runs. 
 
 Now let's see if cadence and heart rate seem to have anything to do with each other.
 
 ```{r cadence by hr, echo = FALSE, messages = FALSE, fig.align='center'}
-ggplot(data = runs, aes(Cad, Avg.HR)) + 
+ggplot(data = philly, aes(Avg.Cadence, Avg.HR)) + 
   geom_point(aes(colour = RunType), na.rm = TRUE) +
   #geom_smooth() +
   xlab("Cadence") + 
   ylab("Average Heart Rate") + 
   scale_y_continuous(limits = c(110, 160)) +
-  ggtitle("Average Heart Rate by Cadence")
+  ggtitle("Average Heart Rate by Cadence") + 
+  facet_grid(~Marathon)
 ```
 
 By looking at average heart rate by average cadence, we can see that there is no relationship at all here. I honestly expected heart rate to increase a bit as cadence increased, which it does sharply for Recovery Runs, but it actually looks to decrease as cadence increased during Normal Runs, and a bit as well during Workouts. Maybe I was more efficient in my running form than I thought during these runs. Now let's look at heart rate by runs types to see if there's some effect there.
 
 ```{r heart rate by run type, echo = FALSE, fig.align='center'}
 #avg. cadence grouped by month
-ggplot(data = runs, aes(RunType, Avg.HR)) + 
-  geom_jitter(aes(colour = RunType)) +
-  geom_boxplot(aes(fill = RunType), outlier.colour = "black", alpha = 0.5) +
-  xlab("Run Type") + 
-  ylab("Avg Heart Rate") + 
-  guides(fill=FALSE) +
-  coord_flip() + 
-  ggtitle("Average Heart Rate per Run Type") 
+philly %>%
+  filter(RunType != "Race",
+         RunType != "Misc") %>%
+  ggplot(aes(RunType, Avg.HR)) + 
+    geom_jitter(aes(colour = RunType)) +
+    geom_boxplot(aes(fill = RunType), outlier.colour = "black", alpha = 0.5) +
+    xlab("Run Type") + 
+    ylab("Avg Heart Rate") + 
+    guides(fill=FALSE) +
+    coord_flip() + 
+    ggtitle("Average Heart Rate per Run Type") + 
+    facet_grid(~Marathon)
 ```
 
-As expected, my heart rate was lowest during recovery runs, but it was also quite varied. We can also see that there were 2 runs wherein my heart rate monitor was off, since my average heart rate was around 70. Also, my average heart rate was not very variable for the other 3 types of runs, excluding the race. This is good, since it means I was able to be consistent in my efforts, depending on the type of scheduled run. My Long Runs also tended to have a lower average heart rate than my "normal" runs, which I personally did not expect. But this does a make a little sense, since I was supposed to run at a bit of a slower pace so that I could run longer without bonking. Also, I did expect my heart rate to be higher during workouts, since they were designed to to push my heart rate to the max during **V02 intervals**, and was supposed to be elevated during those "comfortably hard" **tempo runs**. I can also see that there was one single workout wherein it was higher than my average heart rate during the marathon.
+workout hear rate similar good b/c usually have targets to higt, low variance, much lower vraiance in recovery = more consistenet even if run too hard, long runs a bit more varies this year, GA much more varies. Overall each run type lower
+
+
+#As expected, my heart rate was lowest during recovery runs, but it was also quite varied. We can also see that there were 2 runs wherein my heart rate monitor was off, since my average heart rate was around 70. Also, my average heart rate was not very variable for the other 3 types of runs, excluding the race. This is good, since it means I was able to be consistent in my efforts, depending on the type of scheduled run. My Long Runs also tended to have a lower average heart rate than my "normal" runs, which I personally did not expect. But this does a make a little sense, since I was supposed to run at a bit of a slower pace so that I could run longer without bonking. Also, I did expect my heart rate to be higher during workouts, since they were designed to to push my heart rate to the max during **V02 intervals**, and was supposed to be elevated during those "comfortably hard" **tempo runs**. I can also see that there was one single workout wherein it was higher than my average heart rate during the marathon.
 
 ```{r max heart rate, echo = FALSE}
-runs[which.max(runs$Avg.HR),c("Name","Date","Distance","Avg.HR","Max.HR")]
+philly %>%
+  filter(Marathon == "ph17") %>%
+  arrange(desc(Avg.HR)) %>%
+  select("Name","Date","Distance","Avg.HR","Max.HR") %>%
+  head(1)
+  #philly[which.max(philly[philly$Marathon =="ph17",]$Avg.HR),] %>%
+  #select("Name","Date","Distance","Avg.HR","Max.HR")
 ```
 
-So we can see that my max heart rate was during my 10k Tune-up Race, which does not surprise me since it *huuurt*. 
+So we can see that my max heart rate was during my a reoery rin???????? hot????? too beat up????
 
 Let's now check out my average pace over time, split out by Run Type. I would hope that it would have decreased, just as average heart rate did, due to both increased form and increased fitness, as well as possibly due to decreased outside temperatures making it easier to run faster. 
 
 ```{r avg pace by runs, echo = FALSE, message=FALSE, fig.align='center'}
-ggplot(data = runs, aes(Date, Avg.Pace, colour = RunType)) + 
-  geom_point() +
-  geom_smooth(fill = NA) +  
-  theme(axis.text.x = element_blank()) +
-  theme(axis.text.y = element_blank()) +
-  xlab("Date") + 
-  ylab("Average Pace (mile/minute)") + 
-  ggtitle("Average Pace Over Time") + 
-  labs(caption="")
+philly %>%
+  filter(RunType != "Race",
+         RunType != "Misc") %>%
+  ggplot(aes(as.POSIXct(paste(month(Date),'/',day(Date), sep=""),format="%m/%d"),
+                            Avg.Pace, colour = RunType)) + 
+    geom_point() +
+    geom_smooth(fill = NA) +  
+    theme(axis.text.x = element_blank()) +
+    theme(axis.text.y = element_blank()) +
+    xlab("Date") + 
+    ylab("Average Pace (mile/minute)") + 
+    ggtitle("Average Pace Over Time") + 
+    labs(caption="") + 
+    facet_grid(~Marathon)
 ```
 
 So we see a very slight general decrease overall, but it's not very linear at all, so it does not seem to be that significant. Let's split these into seperate scatter plots by run type.
 
 ```{r avg pace by runs - seperate, echo = FALSE, message=FALSE, fig.align='center'}
-ggplot(data = runs, aes(Date, Avg.Pace, colour = RunType)) + 
-  geom_point() +
-  geom_smooth(fill = NA) +  
-  theme(axis.text.x = element_blank()) +
-  theme(axis.text.y = element_blank()) +
-  xlab("Date") + 
-  ylab("Average Pace (mile/minute)") + 
-  ggtitle("Average Pace Over Time") + 
-  labs(caption="") + 
-  facet_grid(RunType~.)
+philly %>%
+  filter(Marathon == "ph17",
+         RunType != "Race",
+         RunType != "Misc") %>%
+  ggplot(aes(Date, Avg.Pace, colour = RunType)) + 
+    geom_point() +
+    geom_smooth(fill = NA) +  
+    theme(axis.text.x = element_blank()) +
+    theme(axis.text.y = element_blank()) +
+    xlab("Date") + 
+    ylab("Average Pace (mile/minute)") + 
+    ggtitle("Average Pace Over Time") + 
+    labs(caption="") + 
+    facet_grid(RunType~.)
 ```
 
 And, we see that workouts had the lowest average pace, which seemed to actually decrease a tad until about halfway through the plan, but there was a variety of different workouts with different focuses, so this really isn't something we can glean anything out of. Long Runs start to decrease in average pace, possibly due to an increase in outside temperature from July to August causing me to slow down, but then we see a rapid increase, which start sto taper off at the end there. Normal runs seemed to have a more gradual increase over time, but it sped up a bit compared to at the start. Then we see that recovery runs increased down even more so compared to Long Runs, but also had a drop as temperatures cooled (or fitness increased, either or. Maybe both). There was then a quick uptick at the end there, which I would assume would be due to slowing down even more as I tapered for the race, with the 2 slowest recovery runs happening just before the race. We then see the race there, at about 7:10 min/mile, which, while I am happy with my results, I would *love* to get this down under 7:00 min/mile in my next marathon, Philly 2017, with the goal of running about 6:50 min/mile so as to break 3 hours!
 
 ```{r bar of steps, echo = FALSE, fig.align='center'}
-table(runs$RunType)
+table(philly$RunType)
 
-ggplot(data = runs, aes(RunType, (Cad*((hour(runs$Time)*60)+(minute(runs$Time))+(second(runs$Time)/60))))) + 
-  geom_bar(aes(fill = RunType), stat = "identity") +
-  xlab("Run Type") + 
-  ylab("Steps") + 
-  guides(fill=FALSE) +
-  ggtitle("Total Steps Taken by Run Type") 
+philly %>%
+  filter(RunType != "Race",
+         RunType != "Misc") %>%
+  ggplot(aes(RunType,(Avg.Cadence*((hour(Time)*60)+
+                                     (minute(Time))+(second(Time)/60))))) + 
+    geom_bar(aes(fill = RunType), stat = "identity") +
+    xlab("Run Type") + 
+    ylab("Steps") + 
+    guides(fill=FALSE) +
+    ggtitle("Total Steps Taken by Run Type") +
+    facet_grid(~Marathon)
+  
 ```
+# AVERAGE BY TIME
 
 Here we see the majority of runs I had were normal runs, with just a bit less recovery runs. But then in the bar chart, we can see that even though I only just over one quarter of the amount of long runs compared to the amount of recovery runs, the sum of steps taken during my long runs was greater than the sum of steps taken in all of my recovery runs. This makes sense, due to how much longer my long runs were, both in distance and in duration. We also see that steps taken during workouts was quite high compared to steps taken during recovery runs, despite having being just under a third of the amount of recovery runs.
 
 Let's see if my elevation gain had any affect on my average heart rate. I expect that it would, since a larger eleveation gain meant I was climbing more, which requires more exertion, so I expect my average heart rate to be higher with a higher elevation gain.
 
 ```{r elevation and avg hr, echo = FALSE, message=FALSE, fig.align='center'}
-ggplot(data = runs, aes(Elevation.Gain, Avg.HR)) + 
-  geom_point(aes(colour = RunType), na.rm = TRUE) +
-  geom_smooth(fill = NA, na.rm = TRUE) +
-  xlab("Elevation Gain (ft.)") + 
-  ylab("Average Heart Rate (BPM)") +
-  scale_y_continuous(limits = c(110, 160)) +
-  ggtitle("Average Heart Rate by Elevation Gain")
+philly %>%
+  filter(RunType != "Race",
+         RunType != "Misc") %>%
+  ggplot(aes(Elev.Gain, Avg.HR)) + 
+    geom_point(aes(colour = RunType), na.rm = TRUE) +
+    geom_smooth(fill = NA, na.rm = TRUE) +
+    xlab("Elevation Gain (ft.)") + 
+    ylab("Average Heart Rate (BPM)") +
+    scale_y_continuous(limits = c(110, 160)) +
+    ggtitle("Average Heart Rate by Elevation Gain") +
+    facet_grid(~Marathon)
 ```
 
 So it looks like there was a very slight increase in average heart rate as elevation gain increased. And while the increase was not that large in magnitude, it seemed to be quite consistent for the majority of the x-axis. So this went in line with my expectation a bit. Let's see the max heart rate by elevation gain.
 
 ```{r elevation and max hr, echo = FALSE, fig.align='center'}
-ggplot(data = runs, aes(RunType, Max.HR)) + 
-  geom_jitter(aes(colour = RunType)) +
-  geom_boxplot(aes(fill = RunType), outlier.colour = "black", alpha = 0.5) +
-  xlab("Run Type") + 
-  ylab("Max Heart Rate (BPM)") + 
-  ggtitle("Max Heart Rate by Run Type")
+philly %>%
+  filter(RunType != "Race",
+         RunType != "Misc") %>%
+  ggplot(aes(RunType, Max.HR)) + 
+    geom_jitter(aes(colour = RunType)) +
+    geom_boxplot(aes(fill = RunType), outlier.colour = "black", alpha = 0.5) +
+    xlab("Run Type") + 
+    ylab("Max Heart Rate (BPM)") + 
+    ggtitle("Max Heart Rate by Run Type") +
+    facet_grid(~Marathon)
 ```
 
 It's interesting to note that each run type has a very low variability in maximum heart rate with the exception of recovery runs. We see a good number of outliers for normal runs. There are also numerous maximum heart rates  that are up to about 200, which was due to an inaccurate heart rate monitor, since the only chance I had of reaching that heart rate would have been when I was pushing myself to max exertion, which would have only occured during a workout, or during the race. But since this was a marathon, and not a 5K, I will assume it was another heart rate monitor inaccuracy, which is something we just can't always prevent.
